before directory change

--- a/SentimentApp/tracker/templates/startbootstrap-sb-admin-2-gh-pages/charts.html
+++ b/SentimentApp/tracker/templates/startbootstrap-sb-admin-2-gh-pages/charts.html
@@ -350,7 +350,7 @@
                     <canvas id="myAreaChart"></canvas>
                   </div>
                   <hr>
-                  Styling for the area chart can be found in the <code>/js/demo/chart-area-demo.js</code> file.
+                  Styling for the area chart can be found in the <code>/js/demo/chart-area.js</code> file.
                 </div>
               </div>
 
