--- a/SentimentApp/tracker/templates/tracker/data_view.html
+++ b/SentimentApp/tracker/templates/tracker/data_view.html
@@ -2,22 +2,49 @@
 {% block content %}
     <h1>Reviews Page</h1>
     <br><br>
-    <div class="container">
-        <table border="1">
-            <tr>
-                <th>ReviewText</th>
-                <th>Prediction Sentiment</th>
-                <th>Actual Sentiment </th>
-              </tr>
-            {% for dat in datum %}
-              <tr>
-                <td> {{ dat.reviewText}} </td>
-                <td> {{ dat.predictSentiment }} </td>
-                <td> {{ dat.actualSentiment }} </td>
-              </tr>
-        {% endfor %}
-        </table>
-    </div>
+
+    <div class="col-12 col-lg-12">
+              <div class="card card-table">
+                <div class="card-header">
+                  <div class="tools dropdown"> <span class="icon mdi mdi-download"></span><a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown"><span class="icon mdi mdi-more-vert"></span></a>
+                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" href="#">Action</a><a class="dropdown-item" href="#">Another action</a><a class="dropdown-item" href="#">Something else here</a>
+                      <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body table-responsive">
+                  <table class="table table-striped table-borderless">
+                    <thead>
+                      <tr>
+                        <th style="width:80%;">Product</th>
+                        <th>Prediction</th>
+                        <th style="width:10%;">Actual</th>
+                        <th style="width:10%;">Equality test</th>
+                      </tr>
+                    </thead>
+                    <tbody class="no-border-x">
+                      <tr>
+                       {% for dat in datum %}
+                              <td> {{ dat.reviewText}} </td>
+                                <td> {{ dat.predictSentiment }} </td>
+                                <td> {{ dat.actualSentiment }} </td>
+                                {% if dat.predictSentiment == dat.actualSentiment %}
+                                    <td class="text-success">Correct</td>
+                                    <td class="actions"><a class="icon" href="#"><i class="mdi mdi-plus-circle-o"></i></a></td>
+                                {% else %}
+                                    <td class="text-danger">Incorrect</td>
+                                    <td class="actions"><a class="icon" href="#"><i class="mdi mdi-plus-circle-o"></i></a></td>
+                          {% endif %}
+
+                              </tr>
+                        {% endfor %}
+
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
 
     <!--number of results per page limited-->
     {% if is_paginated %}
