--- a/SentimentApp/tracker/templates/tracker/request_form.html
+++ b/SentimentApp/tracker/templates/tracker/request_form.html
@@ -6,29 +6,19 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Event</legend>
+                <legend class="border-bottom mb-4">Request</legend>
 
                       <div class="container">
-                        <div class='col-md-15'>
-                          <div id="tadLeft" class="form-group">
-                              <!--<b><p>Resolution Date*</p></b>-->
-                            <div class='input-group date' id='datetimepicker6'>
-
-                              <!--<input type='text' class="form-control" data-date-format="DD/MM/YYYY HH:mm"/>-->
-                              <!--<span class="input-group-addon">-->
-                                            <!--<span class="glyphicon glyphicon-calendar"></span>-->
-                              <!--</span>-->
+                        <div class='col-md-10' style="position: relative; margin-left: 10%">
+                            <div style="position: relative">
+                                {{ form|crispy }}
                             </div>
-                          </div>
                         </div>
                       </div>
-                <div style="position: relative">
-                    {{ form|crispy }}
-                </div>
 
 
             </fieldset>
-            <div class="form-group">
+            <div class="form-group" style="position: relative; margin-left: 45%">
                 <button class="btn btn-outline-info" type="submit">Post</button>
             </div>
         </form>
