--- a/SentimentApp/tracker/templates/tracker/data_view.html
+++ b/SentimentApp/tracker/templates/tracker/data_view.html
@@ -1,7 +1,76 @@
 {% extends "tracker/base.html" %}
+
 {% block content %}
     <h1>Reviews Page</h1>
     <br><br>
+
+    <div class="row">
+
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-4 col-md-6 mb-4">
+          <div id="precision" class="card border-left-primary shadow h-100 py-2">
+            <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> All Reviews </div>
+                </div>
+                <div class="col-auto">
+                  <i class="fas fa-book-reader  fa-2x text-gray-300"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-4 col-md-6 mb-4">
+          <div id="recall" class="card border-left-info shadow h-100 py-2">
+            <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Correct Predictions </div>
+                  <div class="row no-gutters align-items-center">
+                  </div>
+                </div>
+                <div class="col-auto">
+<!--                  <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>-->
+                  <i class="fas fa-check fa-2x text-gray-300"></i>
+<!--                  <i class="far fa-history"></i>-->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Reviews tab -->
+        <div class="col-xl-4 col-md-6 mb-4">
+          <div id="f1" class="card border-left-warning shadow h-100 py-2">
+            <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Incorrect Predictions </div>
+                </div>
+                <div class="col-auto">
+<!--                  <i class="fas fa-comments fa-2x text-gray-300"></i>-->
+                  <i class="fas fa-times fa-2x text-gray-300"></i>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+        <form class="mr-auto">
+            <div class="input-group">
+              <input type="number" name="q" class="form-control" placeholder="Input a number for BatchID search..." aria-label="Search" >
+              <div class="input-group-append">
+                <button class="btn btn-secondary" type="button">
+                  <i class="fas fa-search fa-sm"></i>
+                </button>
+            </div>
+            </div>
+        </form>
 
     <div class="col-12 col-lg-12">
               <div class="card card-table">
@@ -16,6 +85,7 @@
                   <table class="table table-striped table-borderless">
                     <thead>
                       <tr>
+                        <th style="width:20%;">BatchID</th>
                         <th style="width:80%;">Product</th>
                         <th>Prediction</th>
                         <th style="width:10%;">Actual</th>
@@ -25,6 +95,7 @@
                     <tbody class="no-border-x">
                       <tr>
                        {% for dat in datum %}
+                              <td> <a href="{% url 'class-detail' dat.pos_batch_no %}"> {{dat.pos_batch_no}}</a></td>
                               <td> {{ dat.reviewText}} </td>
                                 <td> {{ dat.predictSentiment }} </td>
                                 <td> {{ dat.actualSentiment }} </td>
@@ -68,5 +139,24 @@
         {% endif %}
 
     {% endif %}
+
+<script>
+    var precisionDIV = document.getElementById('precision');
+var recallDIV = document.getElementById('recall');
+var f1DIV = document.getElementById('f1');
+precisionDIV.style.cursor = 'pointer';
+precisionDIV.onclick = function() {
+    window.location.href = 'http://localhost:8080/dataView/';
+};
+recallDIV.style.cursor = 'pointer';
+recallDIV.onclick = function() {
+    window.location.href = 'http://localhost:8080/dataView/matches/';
+};
+f1DIV.style.cursor = 'pointer';
+f1DIV.onclick = function() {
+    window.location.href = 'http://localhost:8080/dataView/falsematches/';
+};
+
+</script>
 
 {% endblock content %}
