--- a/SentimentApp/tracker/templates/tracker/login.html
+++ b/SentimentApp/tracker/templates/tracker/login.html
@@ -1,6 +1,8 @@
 <!--{% extends "tracker/base.html" %}-->
 {% load crispy_forms_tags %}
 {% block content %}
+
+    <h2>Login</h2>
     <div class="content-section">
         <form method="POST">
             <!--Added security-->
