--- a/SentimentApp/tracker/templates/tracker/false_matches.html
+++ b/SentimentApp/tracker/templates/tracker/false_matches.html
@@ -81,11 +81,11 @@
     <div class="col-12 col-lg-12">
               <div class="card card-table">
                 <div class="card-header">
-                  <div class="tools dropdown"> <span class="icon mdi mdi-download"></span><a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown"><span class="icon mdi mdi-more-vert"></span></a>
-                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" href="#">Action</a><a class="dropdown-item" href="#">Another action</a><a class="dropdown-item" href="#">Something else here</a>
-                      <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-                  </div>
+<!--                  <div class="tools dropdown"> <span class="icon mdi mdi-download"></span><a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown"><span class="icon mdi mdi-more-vert"></span></a>-->
+<!--                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" href="#">Action</a><a class="dropdown-item" href="#">Another action</a><a class="dropdown-item" href="#">Something else here</a>-->
+<!--                      <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a>-->
+<!--                    </div>-->
+<!--                  </div>-->
                 </div>
                 <div class="card-body table-responsive">
                   <table class="table table-striped table-borderless">
