--- a/SentimentApp/tracker/templates/tracker/matches.html
+++ b/SentimentApp/tracker/templates/tracker/matches.html
@@ -73,7 +73,7 @@
             <div class="input-group">
               <input type="number" name="q" class="form-control" placeholder="Input a number for BatchID search..." aria-label="Search" >
               <div class="input-group-append">
-                <button class="btn btn-secondary" type="button">
+                <button class="btn btn-secondary" type="submit">
                   <i class="fas fa-search fa-sm"></i>
                 </button>
             </div>
