--- a/SentimentApp/tracker/templates/tracker/base.html
+++ b/SentimentApp/tracker/templates/tracker/base.html
@@ -88,7 +88,7 @@
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+        <a id="loginDrop" class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-key"></i>
           <span>Login Pages</span>
         </a>
