--- a/SentimentApp/tracker/templates/tracker/data_view.html
+++ b/SentimentApp/tracker/templates/tracker/data_view.html
@@ -65,7 +65,7 @@
             <div class="input-group">
               <input type="number" name="q" class="form-control" placeholder="Input a number for BatchID search..." aria-label="Search" >
               <div class="input-group-append">
-                <button class="btn btn-secondary" type="button">
+                <button class="btn btn-secondary" type="submit">
                   <i class="fas fa-search fa-sm"></i>
                 </button>
             </div>
@@ -116,26 +116,26 @@
               </div>
             </div>
 
-
+q={{searchq}}&
     <!--number of results per page limited-->
     {% if is_paginated %}
 
         {% if page_obj.has_previous %}
-            <a class="btn btn-outline-secondary mb-4" href="?page=1">First</a>
-            <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <a class="btn btn-outline-secondary mb-4" href="?q={{searchq}}&page=1">First</a>
+            <a class="btn btn-outline-secondary mb-4" href="?q={{searchq}}&page={{ page_obj.previous_page_number }}">Previous</a>
         {% endif %}
 
         {% for num in page_obj.paginator.page_range %}
             {% if page_obj.number == num %}
-                <a class="btn btn-secondary mb-4" href="?page={{ num }}">{{ num }}</a>
+                <a class="btn btn-secondary mb-4" href="?q={{searchq}}&page={{ num }}">{{ num }}</a>
             {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                <a class="btn btn-outline-secondary mb-4" href="?page={{ num }}">{{ num }}</a>
+                <a class="btn btn-outline-secondary mb-4" href="?q={{searchq}}&page={{ num }}">{{ num }}</a>
             {% endif %}
         {% endfor %}
 
         {% if page_obj.has_next %}
-            <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-            <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+            <a class="btn btn-outline-secondary mb-4" href="?q={{searchq}}&page={{ page_obj.next_page_number }}">Next</a>
+            <a class="btn btn-outline-secondary mb-4" href="?q={{searchq}}&page={{ page_obj.paginator.num_pages }}">Last</a>
         {% endif %}
 
     {% endif %}
