--- a/SentimentApp/tracker/templates/tracker/base.html
+++ b/SentimentApp/tracker/templates/tracker/base.html
@@ -57,15 +57,15 @@
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+        <a id="visuals" class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Visualisations</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Custom Visuals:</h6>
-            <a class="collapse-item" href="{% url 'tracker-scores'%}">Time series chart <i class="fa fa-chart-area"></i></a>
-            <a class="collapse-item" href="{% url 'tracker-counts' %}">Pie charts <i class="fas fa-chart-pie"></i></a>
+            <a id="line" class="collapse-item" href="{% url 'tracker-scores'%}">Time series chart <i class="fa fa-chart-area"></i></a>
+            <a id="pie" class="collapse-item" href="{% url 'tracker-counts' %}">Pie charts <i class="fas fa-chart-pie"></i></a>
           </div>
         </div>
       </li>
