--- a/SentimentApp/tracker/templates/tracker/data_view.html
+++ b/SentimentApp/tracker/templates/tracker/data_view.html
@@ -1,8 +1,12 @@
 {% extends "tracker/base.html" %}
 
 {% block content %}
+
+{% if user.is_authenticated %}
+
     <h1>Reviews Page</h1>
     <br><br>
+
 
     <div class="row">
 
@@ -157,5 +161,13 @@ f1DIV.onclick = function() {
 };
 
 </script>
+
+
+{% else %}
+    <h1 class="text-center" ><a href="{% url 'login' %}">Login here</a></h1>
+    <br>
+    <h2 class="text-center"> <a href="{% url 'request-create' %}"> Request access </a> </h2>
+
+{% endif %}
 
 {% endblock content %}
