--- a/SentimentApp/tracker/templates/tracker/trained_models.html
+++ b/SentimentApp/tracker/templates/tracker/trained_models.html
@@ -1,10 +1,13 @@
 {% extends "tracker/base.html" %}
 {% block content %}
 
+
+{% if user.is_authenticated %}
+
     <h1>Model Accuracy</h1>
     <br><br>
 
-    <div class="col-12 col-lg-12">
+ <div class="col-12 col-lg-12">
               <div class="card card-table">
                 <div class="card-header">
 <!--                  <div class="tools dropdown"> <span class="icon mdi mdi-download"></span><a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown"><span class="icon mdi mdi-more-vert"></span></a>-->
@@ -42,6 +45,12 @@
               </div>
             </div>
 
+{% else %}
+    <h1 class="text-center" ><a href="{% url 'login' %}">Login here</a></h1>
+    <br>
+    <h2 class="text-center"> <a href="{% url 'request-create' %}"> Request access </a> </h2>
+
+{% endif %}
 
 
 {% endblock content %}
