--- a/SentimentApp/tracker/templates/tracker/false_matches.html
+++ b/SentimentApp/tracker/templates/tracker/false_matches.html
@@ -1,5 +1,8 @@
 {% extends "tracker/base.html" %}
 {% block content %}
+
+{% if user.is_authenticated %}
+
     <h1>Incorrect Predictions Page</h1>
     <br><br>
 
@@ -160,5 +163,11 @@ f1DIV.onclick = function() {
 
 </script>
 
+{% else %}
+    <h1 class="text-center" ><a href="{% url 'login' %}">Login here</a></h1>
+    <br>
+    <h2 class="text-center"> <a href="{% url 'request-create' %}"> Request access </a> </h2>
+
+{% endif %}
 
 {% endblock content %}
