--- a/SentimentApp/tracker/templates/tracker/false_matches.html
+++ b/SentimentApp/tracker/templates/tracker/false_matches.html
@@ -1,9 +1,11 @@
 {% extends "tracker/base.html" %}
+
+
 {% block content %}
 
 {% if user.is_authenticated %}
 
-    <h1>Incorrect Predictions Page</h1>
+    <h1>Incorrect predictions page</h1>
     <br><br>
 
 <style>
@@ -37,7 +39,7 @@
             <div class="card-body">
               <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Correct Predictions </div>
+                  <div id="correct-page"  class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Correct Predictions </div>
                   <div class="row no-gutters align-items-center">
                   </div>
                 </div>
@@ -57,7 +59,7 @@
             <div class="card-body">
               <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Incorrect Predictions </div>
+                  <div id="incorrect-page" class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Incorrect Predictions </div>
                 </div>
                 <div class="col-auto">
 <!--                  <i class="fas fa-comments fa-2x text-gray-300"></i>-->
@@ -72,7 +74,7 @@
 
         <form class="mr-auto">
             <div class="input-group">
-              <input type="number" name="q" class="form-control" placeholder="Input a number for BatchID search..." aria-label="Search" >
+              <input type="number" name="q" class="form-control" placeholder="input a number for batchid search..." aria-label="search" >
               <div class="input-group-append">
                 <button class="btn btn-secondary" type="submit">
                   <i class="fas fa-search fa-sm"></i>
@@ -85,8 +87,8 @@
               <div class="card card-table">
                 <div class="card-header">
 <!--                  <div class="tools dropdown"> <span class="icon mdi mdi-download"></span><a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown"><span class="icon mdi mdi-more-vert"></span></a>-->
-<!--                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" href="#">Action</a><a class="dropdown-item" href="#">Another action</a><a class="dropdown-item" href="#">Something else here</a>-->
-<!--                      <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Separated link</a>-->
+<!--                    <div class="dropdown-menu" role="menu"><a class="dropdown-item" href="#">action</a><a class="dropdown-item" href="#">another action</a><a class="dropdown-item" href="#">something else here</a>-->
+<!--                      <div class="dropdown-divider"></div><a class="dropdown-item" href="#">separated link</a>-->
 <!--                    </div>-->
 <!--                  </div>-->
                 </div>
@@ -94,7 +96,7 @@
                   <table class="table table-striped table-borderless">
                     <thead>
                       <tr>
-                          <th style="width:20%;">BatchID</th>
+                        <th style="width:20%;">BatchID</th>
                         <th style="width:80%;">Product</th>
                         <th>Prediction</th>
                         <th style="width:10%;">Actual</th>
@@ -125,7 +127,6 @@
               </div>
             </div>
 
-
         <div id="pag" class="pagination">
     <span class="step-links">
         {% if datum.has_previous %}
@@ -134,7 +135,7 @@
         {% endif %}
 
         <span class="current">
-            Page {{ datum.number }} of {{ datum.paginator.num_pages }}.
+            page {{ datum.number }} of {{ datum.paginator.num_pages }}.
         </span>
 
         {% if datum.has_next %}
@@ -143,7 +144,6 @@
         {% endif %}
     </span>
 </div>
-
 <script>
     var precisionDIV = document.getElementById('precision');
 var recallDIV = document.getElementById('recall');
@@ -162,7 +162,6 @@ f1DIV.onclick = function() {
 };
 
 </script>
-
 {% else %}
     <h1 class="text-center" ><a href="{% url 'login' %}">Login here</a></h1>
     <br>
