--- a/SentimentApp/tracker/templates/tracker/matches.html
+++ b/SentimentApp/tracker/templates/tracker/matches.html
@@ -126,13 +126,12 @@
               </div>
             </div>
 
-
     <!--number of results per page limited-->
     <div id="pag" class="pagination">
     <span class="step-links">
         {% if datum.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ datum.previous_page_number }}">previous</a>
+            <a href="?q={{searchq}}&page=1">&laquo; first</a>
+            <a href="?q={{searchq}}&page={{ datum.previous_page_number }}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -140,8 +139,8 @@
         </span>
 
         {% if datum.has_next %}
-            <a href="?page={{ datum.next_page_number }}">next</a>
-            <a href="?page={{ datum.paginator.num_pages }}">last &raquo;</a>
+            <a href="?q={{searchq}}&page={{ datum.next_page_number }}">next</a>
+            <a href="?q={{searchq}}&page={{ datum.paginator.num_pages }}">last &raquo;</a>
         {% endif %}
     </span>
 </div>
