--- a/SentimentApp/tracker/templates/tracker/matches.html
+++ b/SentimentApp/tracker/templates/tracker/matches.html
@@ -14,10 +14,11 @@
     <h1>Correct Predictions Page</h1>
     <br><br>
 
-    <div class="row">
+<div class="row">
 
-        <!-- Earnings (Monthly) Card Example -->
-        <div class="col-xl-4 col-md-6 mb-4">
+    <!-- All Reviews -->
+    <div class="col-xl-4 col-md-6 mb-4">
+        <a href="{% url 'tracker-dataView' %}">
           <div id="precision" class="card border-left-primary shadow h-100 py-2">
             <div class="card-body">
               <div class="row no-gutters align-items-center">
@@ -30,46 +31,49 @@
               </div>
             </div>
           </div>
-        </div>
+        </a>
+    </div>
 
-        <!-- Earnings (Monthly) Card Example -->
-        <div class="col-xl-4 col-md-6 mb-4">
+    <!-- Correct Predictions -->
+    <div class="col-xl-4 col-md-6 mb-4">
+        <!-- Uncomment if needed -->
+         <a href="{% url 'tracker-match' %}">
           <div id="recall" class="card border-left-info shadow h-100 py-2">
             <div class="card-body">
               <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Correct Predictions </div>
+                  <div id="correct-page" class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Correct Predictions </div>
                   <div class="row no-gutters align-items-center">
                   </div>
                 </div>
                 <div class="col-auto">
-<!--                  <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>-->
                   <i class="fas fa-check fa-2x text-gray-300"></i>
-<!--                  <i class="far fa-history"></i>-->
                 </div>
               </div>
             </div>
           </div>
-        </div>
+         </a>
+    </div>
 
-        <!-- Reviews tab -->
-        <div class="col-xl-4 col-md-6 mb-4">
+    <!-- Incorrect Predictions -->
+    <div class="col-xl-4 col-md-6 mb-4">
+        <a href="{% url 'tracker-falsematch' %}">
           <div id="f1" class="card border-left-warning shadow h-100 py-2">
             <div class="card-body">
               <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                  <div class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Incorrect Predictions </div>
+                  <div id="incorrect-page" class="h5 mb-0 font-weight-bold text-gray-800" style="text-align: center"> Incorrect Predictions </div>
                 </div>
                 <div class="col-auto">
-<!--                  <i class="fas fa-comments fa-2x text-gray-300"></i>-->
                   <i class="fas fa-times fa-2x text-gray-300"></i>
-
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </a>
+    </div>
+
+</div>
 
         <form class="mr-auto">
             <div class="input-group">
@@ -144,25 +148,6 @@
         {% endif %}
     </span>
 </div>
-
-<script>
-    var precisionDIV = document.getElementById('precision');
-var recallDIV = document.getElementById('recall');
-var f1DIV = document.getElementById('f1');
-precisionDIV.style.cursor = 'pointer';
-precisionDIV.onclick = function() {
-    window.location.href = 'http://localhost:8080/dataView/';
-};
-recallDIV.style.cursor = 'pointer';
-recallDIV.onclick = function() {
-    window.location.href = 'http://localhost:8080/dataView/matches/';
-};
-f1DIV.style.cursor = 'pointer';
-f1DIV.onclick = function() {
-    window.location.href = 'http://localhost:8080/dataView/falsematches/';
-};
-
-</script>
 
 {% else %}
     <h1 class="text-center" ><a href="{% url 'login' %}">Login here</a></h1>
