incorporating user upload functionality: finished

--- a/SentimentApp/tracker/templates/tracker/base.html
+++ b/SentimentApp/tracker/templates/tracker/base.html
@@ -73,8 +73,15 @@
       <!-- Nav Item - Model Menu -->
       <li class="nav-item">
         <a class="nav-link " href="{% url 'models' %}">
+          <i class="fa fa-file"></i>
+          <span>Model history</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'upload_file' %}">
           <i class="fas fa-fw fa-cog"></i>
-          <span>Training Models</span>
+          <span>Train a new model</span>
         </a>
       </li>
 
