Changing chart view from batch date to batch id

--- a/SentimentApp/tracker/templates/tracker/base.html
+++ b/SentimentApp/tracker/templates/tracker/base.html
@@ -64,7 +64,7 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Custom Visuals:</h6>
-            <a id="line" class="collapse-item" href="{% url 'tracker-scores'%}">Time series chart <i class="fa fa-chart-area"></i></a>
+            <a id="line" class="collapse-item" href="{% url 'chart'%}">Time series chart <i class="fa fa-chart-area"></i></a>
             <a id="pie" class="collapse-item" href="{% url 'tracker-counts' %}">Pie charts <i class="fas fa-chart-pie"></i></a>
           </div>
         </div>
